enumset/tests/compile-fail/variants.stderr
error: `#[derive(EnumSetType)]` currently only supports enum discriminants up to 127.
 --> $DIR/variants.rs:5:5
  |
5 |     Variant = 128,
  |     ^^^^^^^^^^^^^

error: `#[derive(EnumSetType)]` currently only supports enums up to 128 variants.
  --> $DIR/variants.rs:16:95
   |
16 |     _113, _114, _115, _116, _117, _118, _119, _120, _121, _122, _123, _124, _125, _126, _127, _128,
   |                                                                                               ^^^^

error: Enum set discriminants must be `u32`s.
  --> $DIR/variants.rs:21:5
   |
21 |     Variant = -1,
   |     ^^^^^^^^^^^^

error: Only `u8`, `u16` and `u32` reprs are supported.
  --> $DIR/variants.rs:25:1
   |
25 | #[repr(usize)]
   | ^^^^^^^^^^^^^^

error: `#[derive(EnumSetType)]` can only be used on fieldless enums.
  --> $DIR/variants.rs:32:5
   |
32 |     Variant(u32),
   |     ^^^^^^^^^^^^

error: Too many variants for u8 serialization repr.
  --> $DIR/variants.rs:36:1
   |
36 | / #[enumset(serialize_repr = "u8")]
37 | | enum BadSerializationRepr {
38 | |     Variant = 8,
39 | | }
   | |_^

error: `#[derive(EnumSetType)]` may only be used on enums
  --> $DIR/variants.rs:42:1
   |
42 | / struct BadItemType {
43 | |
44 | | }
   | |_^
